# RemoteParser

./: .gitignore  CMakeLists.txt  README.md  cleanrebuild.bat  generate_certs.bat  generate_certs.sh  installer.iss  rebuild.bat
include/: client.h  clientwindow.h  launchwindow.h  mainwindow.h  server.h  serverwindow.h  transferrow.h
src/: client.cpp  clientwindow.cpp  launchwindow.cpp  main.cpp  mainwindow.cpp  server.cpp  serverwindow.cpp  transferrow.cpp
ui/: clientwindow.ui
